[package]
name = "siege-math"
version = "0.5.1"
authors = ["Mike Dilger <mike@optcomp.nz>"]
description = "Math library for the Siege Engine"
repository = "https://github.com/SiegeEngine/siege-math"
documentation = "https://docs.rs/siege-math"
readme = "README.md"
keywords = [ "siege", "math" ]
license = "MIT"

[dependencies]
num-traits = "0.2"
float-cmp = "0.4"
serde = "1.0"
serde_derive = "1.0"
