[package]
name = "siege-math"
version = "0.6.0"
authors = ["Mike Dilger <mike@optcomp.nz>"]
description = "Math library for the Siege Engine"
repository = "https://github.com/SiegeEngine/siege-math"
documentation = "https://docs.rs/siege-math"
readme = "README.md"
keywords = [ "siege", "math" ]
license = "MIT"
edition = "2018"

[dependencies]
num-traits = "0.2"
float-cmp = "0.6"
serde = { version = "1.0", features = [ "derive" ] }
